# mpvlib

./: README.md  meson.build  meson_options.txt
src/: common.c  common.h  context.c  context.h  global.h  log_level.h  msg.c  msg_control.h  path.c  ra.c  ra.h  shader_cache.c  shader_cache.h  spirv.c  spirv.h  spirv_shaderc.c  user_shaders.c  utils.c  utils.h
src/common/: msg.c
src/compilation/: context.h  shader_cache.c  shader_cache.h  utils.c
src/imgproc/: csputils.h  img_format.h  video.c
src/libmpv/: client.h
src/opengl/: context_android.c
src/options/: m_option.c  m_option.h  path.c  path.h
src/osdep/: io.c  threads.c  timer.c
